added StudyType to Course and CourseSession class, fixed some issues with the Scheduler.java